Реализовано добавление mesage

--- a/src/components/my-post/my-post.css
+++ b/src/components/my-post/my-post.css
@@ -1,3 +1,11 @@
 .posts__mypost {
   margin-bottom: 10px;
 }
+
+.posts__area {
+  margin-bottom: 20px;
+}
+
+.posts__btn-block {
+  margin-bottom: 30px;
+}
